...
            android:onClick="onCheckboxClicked"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Schools"
            android:id="@+id/schools_checkBox"
            android:checked="false"
            android:onClick="onCheckboxClicked"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Users"
            android:id="@+id/user_checkBox"
            android:onClick="onCheckboxClicked"
            />

        <!--<ToggleButton-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="30dp"-->
...
            android:layout_height="wrap_content"
            android:text="With: "/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchText"
            android:layout_weight="1"
            android:imeOptions="actionDone"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
...
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top">
        <Button
            android:layout_gravity="center_horizontal|top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search"
            android:id="@+id/button"
            android:onClick="onSearchClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
...
