<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".views.MessageFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <TextView
                android:id="@+id/message_title"
                style="@style/TV_Style_Title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Your Message"/>

            <EditText
                style="@style/ET_Style"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/message_content"
                />
        </LinearLayout>
    </ScrollView>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:baselineAligned="false">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <Button
                    style="@style/Button"
                    android:text="Send Message"
                    android:id="@+id/send_message_button"
                    android:onClick="onClick"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
