...
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <Button
                style="@style/Button"
                android:text="Contact User"
                android:id="@+id/contact_user_button"
                android:onClick="onClick"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
...
