...
            android:id="@+id/tv_phone"
            />
    </LinearLayout>

    <Button
        style="@style/Button"
        android:text="Make My School"
        android:id="@+id/make_my_school_button"
        android:layout_height="34dp"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
