<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".RegisterActivity"
    android:label="@string/action_register">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/register_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_register_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">



            <EditText android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_name"
                android:inputType="textPersonName"

                android:ems="10"
                android:layout_gravity="center_horizontal" />

            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                                  android:layout_height="wrap_content" android:hint="@string/register_email"
                                  android:inputType="textEmailAddress" android:maxLines="1"
                                  android:singleLine="true" />

            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/register_password"
                android:imeActionId="@+id/register"
                android:imeActionLabel="@string/action_register"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <EditText android:id="@+id/confirm_password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/register_confirm_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_register"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />
            <RadioGroup
                android:id="@+id/radio_group_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Teacher"
                    android:id="@+id/register_teacher"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Speaker"
                    android:id="@+id/register_speaker"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Both"
                    android:id="@+id/register_both"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <Button android:id="@+id/register_button" style="@style/Button"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_register"
                android:textStyle="bold"
                android:onClick="onClick"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>

