<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Strings related to sign up -->
    <string name="register_email">Email</string>
    <string name="register_name">Name</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_teacher">Teacher</string>
    <string name="register_speaker">Speaker</string>
    <string name="register_both">Both</string>
    <string name="action_register">Register</string>

    <string name="register_error_invalid_email">This email address is invalid</string>
    <string name="register_error_invalid_password">This password is too short</string>
    <string name="register_error_incorrect_confirm_password">Passwords don\'t match</string>
</resources>
